# sensi

./: .env.example  .gitignore  64models.md  README.md  agent_state.db  compressed-soaring-hinton.md  continual_rl_papers_completed_table.csv  continual_rl_papers_updated.xlsx  de-in-ddg.md  grok-list-papers.csv  model.md  models-list.md  package-lock.json  pyproject.toml  sensi.md  sota-papers-by-strawberry.md  ~$continual_rl_papers_updated.xlsx
agents/: README.md  __init__.py  agent.py  next.md  sensi.py  sensi_llm.py  structs.py
agents/templates/: langgraph_random_agent.py  llm_agents.py  random_agent.py  smolagents.py
agents/templates/langgraph_thinking/: agent.py
background/: BACKGROUND.md
notebooks/: sensi_v2_demo.ipynb
sensipaper/: references.bib  sensi-paper.aux  sensi-paper.bbl  sensi-paper.blg  sensi-paper.out  sensi-paper.tex  sensi-v2-blog-post.html
tests/unit/: test_core.py
